app/assets/stylesheets/directory_objects_show.css.scss
$search-color: #B1B3B3;
$logout-color: #B1B3B3;
$home-color: #B1B3B3;
$people-color: #5B7F95;
$events-color: #9CAF88;
$rooms-color: #C26E60;
$departments-color: #E6A65D;
$map-color: #00573F;
$floor-color: #ACA39A;
$about-color: #B1B3B3;
$vertical-nav-width: 130px;
$right-btn-container-width: 55px;
$right-btn-container-right-offset: 30px;
$vertical-slider-element-height: 15px;

.icon-home:after     { content: "\E805"; }
.icon-people:after     { content: "\E802"; }
.icon-departments:after      { content: "\E800"; }
.icon-events:after       { content: "\E801"; }
.icon-rooms:after { content: "\E809"; }
.icon-map:after { content: "\E804"; }
.icon-search:after { content: "\E806"; }
.icon-about:after { content: "\E803"; }
.icon-accessible:after { content: "\E807"; }
.icon-repeat:after { content: "\E808"; }
.icon-logout:after { content: "\E80A"; }

@font-face {
  font-family: 'fontello';
  src: font-url('fontello.eot');
  src: font-url('fontello.eot?#iefix') format('embedded-opentype'),
       font-url('fontello.woff') format('woff'),
       font-url('fontello.ttf') format('truetype'),
       font-url('fontello.svg#fontello') format('svg');
  font-weight: normal; font-style: normal;
}

[class*=" icon-"] {
  font-family: 'fontello';
  font-style: normal;
  font-size: 3em;
  speak: none;
}

body {
  background: white;
}

/* Used on every page except 'landing' */
.main-content {
  position: absolute;
  left: $vertical-nav-width;
  width: unquote("calc(100vw - ") $vertical-nav-width unquote(" - ") $right-btn-container-width + $right-btn-container-right-offset unquote(")");
}

#map>div {
  width: 100%;
  height: 73vh; //calc(100vh - 200px);
}

#mapLoading {
	font-size: 7vw;
  color: #777;
  text-align: center;
  height: 8vw;
  position: relative;

  #mapLoadingInner {
    width: 100%;
    height: auto;

    position: relative;
    top: 45%;
    -webkit-transform: translateY(-45%);
    -ms-transform: translateY(-45%);
    transform: translateY(-45%);

    font-size: 5vw;
  }
}

#map svg {
  margin: 0;
  padding: 0;
  height: 100%;
  width: 100%;

  // g {
  //     -webkit-transition: all 0.5s ease-in-out;
  //     -moz-transition: all 0.5s ease-in-out;
  //     -o-transition: all 0.5s ease-in-out;
  //     transition: all 0.5s ease-in-out;
  // }

  -webkit-backface-visibility: initial !important;
  -webkit-transform-origin: 50% 50%;
}

/* map target information pane */
#destination-view, #scrubber-view {
  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
  text-align: center;
  width: 19vw;
  overflow: auto;

  background-color: #fff;

  position: fixed;
  top: 100px;
  bottom: 100px;
  margin-bottom: 0;
  right: -1000px;

  border: none;
  box-shadow: 0 20px 100px 0 rgba(0,0,0,.2);
  z-index: 10;
  display: -webkit-box;
  display: -webkit-flex;
  display: -moz-box;
  display: -moz-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-direction: normal;
  -webkit-box-orient: vertical;
  -webkit-flex-direction: column;
  -moz-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  transition: all 0.5s cubic-bezier(0.4,0,.2,1);

  h1 {
    font-size: 2.25vw;
    padding: 0.15em;
    border-top: 5px double #fff;
    border-bottom: 5px double #fff;
  }

  h2 {
    font-size: 1.5vw;
    color: gray;
    text-transform: capitalize;
  }

  span {
    font-size: 1.2vw;
  }
}

.btn-xl{
  height: 95%;
  width: 95%;
  font-size: 3.7rem;
  border-radius: 32px;
  color: white;
}
/* ... */

